--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -1,12 +1,17 @@
 ---
-layout: archive
+layout: single
 title: "Teaching"
 permalink: /teaching/
 author_profile: true
 ---
 
-{% include base_path %}
+## Courses
+- Research Methods, Undergraduate, Universidad Mayor (2023)
+- Quantitative Methods, Undergraduate, Universidad Mayor (2023)
+- Society and Health, PhD, Universidad Mayor (2022)
+- Philosophy of Science, Undergraduate, Universidad Mayor (2022)
+- Social Network Analysis, Undergraduate, PUC Chile (2021)
 
-{% for post in site.teaching reversed %}
-  {% include archive-single.html %}
-{% endfor %}
+## Workshops
+- Exponential Random Graph Models (ERGM), CHISOCNET (2023)
+- Stochastic Actor-Oriented Models (SAOM/SIENA), CHISOCNET (2023)
