--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -3,6 +3,7 @@ layout: archive
 title: "Talks and presentations"
 permalink: /talks/
 author_profile: true
+author: diego
 ---
 
 {% if site.talkmap_link == true %}
