--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -7,12 +7,20 @@ author: diego
 ---
 
 ## Courses
-- Research Methods, Undergraduate, Universidad Mayor (2023)
-- Quantitative Methods, Undergraduate, Universidad Mayor (2023)
-- Society and Health, PhD, Universidad Mayor (2022)
-- Philosophy of Science, Undergraduate, Universidad Mayor (2022)
-- Social Network Analysis, Undergraduate, PUC Chile (2021)
+
+- Research Seminar, PhD, Public Policy Program, Universidad Mayor, Chile (2025)
+- Thesis Seminar, Undergraduate, Education Department, Universidad Mayor, Chile (2025)
+- Mixed Methods, PhD, Public Policy Program, Universidad Mayor, Chile (2024)
+- Quantitative Methods, Undergraduate, Psychology Department, Universidad Mayor, Chile (2024)
+- Research Seminar, PhD, Public Policy Program, Universidad Mayor, Chile (2024)
+- Research Methods, Undergraduate, Psychology Department, Universidad Mayor, Chile (2023)
+- Quantitative Methods, Undergraduate, Psychology Department, Universidad Mayor, Chile (2023)
+- Society and Health, PhD, Public Policy Program, Universidad Mayor, Chile (2022)
+- Research Methods, Undergraduate, Psychology Department, Universidad Mayor, Chile (2022)
+- Philosophy of Science, Undergraduate, Psychology Department, Universidad Mayor, Chile (2022)
+- Social Network Analysis, Undergraduate, Institute of Sociology, Pontificia Universidad Católica de Chile, Chile (2021)
 
 ## Workshops
+
 - Exponential Random Graph Models (ERGM), CHISOCNET (2023)
-- Stochastic Actor-Oriented Models (SAOM/SIENA), CHISOCNET (2023)
+- Stochastic Actor-Oriented Models (SAOM/RSiena), CHISOCNET (2023)
