--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -22,5 +22,9 @@ author: diego
 
 ## Workshops
 
-- Exponential Random Graph Models (ERGM), CHISOCNET (2023)
-- Stochastic Actor-Oriented Models (SAOM/RSiena), CHISOCNET (2023)
+- Introduction to Social Network Analysis, I CHISOCNET Workshop, Pontificia Universidad Católica de Chile, Chile (2024)
+- Network Visualization, I CHISOCNET Workshop, Pontificia Universidad Católica de Chile, Chile (2024)
+- Stochastic Actor-Oriented Models (SAOM/RSiena), I CHISOCNET Workshop, Pontificia Universidad Católica de Chile, Chile (2024)
+- Exponential Random Graph Models (ERGM), I Chilean Social Network Conference (CHISOCNET), Universidad Mayor, Chile (2023)
+- Stochastic Actor-Oriented Models (SAOM/RSiena), I Chilean Social Network Conference (CHISOCNET), Universidad Mayor, Chile (2023)
+
