--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -6,25 +6,30 @@ author_profile: true
 author: diego
 ---
 
-## Courses
+<h2>Courses</h2>
 
-- Research Seminar, PhD, Public Policy Program, Universidad Mayor, Chile (2025)
-- Thesis Seminar, Undergraduate, Education Department, Universidad Mayor, Chile (2025)
-- Mixed Methods, PhD, Public Policy Program, Universidad Mayor, Chile (2024)
-- Quantitative Methods, Undergraduate, Psychology Department, Universidad Mayor, Chile (2024)
-- Research Seminar, PhD, Public Policy Program, Universidad Mayor, Chile (2024)
-- Research Methods, Undergraduate, Psychology Department, Universidad Mayor, Chile (2023)
-- Quantitative Methods, Undergraduate, Psychology Department, Universidad Mayor, Chile (2023)
-- Society and Health, PhD, Public Policy Program, Universidad Mayor, Chile (2022)
-- Research Methods, Undergraduate, Psychology Department, Universidad Mayor, Chile (2022)
-- Philosophy of Science, Undergraduate, Psychology Department, Universidad Mayor, Chile (2022)
-- Social Network Analysis, Undergraduate, Institute of Sociology, Pontificia Universidad Católica de Chile, Chile (2021)
+<ul>
+  <li>Research Seminar, PhD, Public Policy Program, Universidad Mayor, Chile (2025)</li>
+  <li>Thesis Seminar, Undergraduate, Education Department, Universidad Mayor, Chile (2025)</li>
+  <li>Mixed Methods, PhD, Public Policy Program, Universidad Mayor, Chile (2024)</li>
+  <li>Quantitative Methods, Undergraduate, Psychology Department, Universidad Mayor, Chile (2024)</li>
+  <li>Research Seminar, PhD, Public Policy Program, Universidad Mayor, Chile (2024)</li>
+  <li>Research Methods, Undergraduate, Psychology Department, Universidad Mayor, Chile (2023)</li>
+  <li>Quantitative Methods, Undergraduate, Psychology Department, Universidad Mayor, Chile (2023)</li>
+  <li>Society and Health, PhD, Public Policy Program, Universidad Mayor, Chile (2022)</li>
+  <li>Research Methods, Undergraduate, Psychology Department, Universidad Mayor, Chile (2022)</li>
+  <li>Philosophy of Science, Undergraduate, Psychology Department, Universidad Mayor, Chile (2022)</li>
+  <li>Social Network Analysis, Undergraduate, Institute of Sociology, Pontificia Universidad Católica de Chile, Chile (2021)</li>
+</ul>
 
-## Workshops
+<h2>Workshops</h2>
 
-- Introduction to Social Network Analysis, I CHISOCNET Workshop, Pontificia Universidad Católica de Chile, Chile (2024)
-- Network Visualization, I CHISOCNET Workshop, Pontificia Universidad Católica de Chile, Chile (2024)
-- Stochastic Actor-Oriented Models (SAOM/RSiena), I CHISOCNET Workshop, Pontificia Universidad Católica de Chile, Chile (2024)
-- Exponential Random Graph Models (ERGM), I Chilean Social Network Conference (CHISOCNET), Universidad Mayor, Chile (2023)
-- Stochastic Actor-Oriented Models (SAOM/RSiena), I Chilean Social Network Conference (CHISOCNET), Universidad Mayor, Chile (2023)
+<ul>
+  <li>Introduction to Social Network Analysis, I CHISOCNET Workshop, Pontificia Universidad Católica de Chile, Chile (2024)</li>
+  <li>Network Visualization, I CHISOCNET Workshop, Pontificia Universidad Católica de Chile, Chile (2024)</li>
+  <li>Stochastic Actor-Oriented Models (SAOM/RSiena), I CHISOCNET Workshop, Pontificia Universidad Católica de Chile, Chile (2024)</li>
+  <li>Exponential Random Graph Models (ERGM), I Chilean Social Network Conference (CHISOCNET), Universidad Mayor, Chile (2023)</li>
+  <li>Stochastic Actor-Oriented Models (SAOM/RSiena), I Chilean Social Network Conference (CHISOCNET), Universidad Mayor, Chile (2023)</li>
+</ul>
+
 
