--- a/_pages/presentations.html
+++ b/_pages/presentations.html
@@ -119,3 +119,51 @@ author: diego
   </li>
 
 </ul>
+
+<h2>Seminarios</h2>
+
+<ul>
+
+  <li>
+    Escuela de Psicología, Pontificia Universidad Católica de Chile (EPUC). (Octubre, 2023).
+    <em>Presentación en coloquio sobre aplicaciones del análisis de redes sociales en ciencias sociales</em>.
+    Coloquio (postgrado), Santiago, Chile.
+  </li>
+
+  <li>
+    CEPPE UC. (Agosto, 2022).
+    <em>Presentación en “Tiny Desk” sobre análisis de redes sociales y agenda de investigación en educación</em>.
+    Presentación (pre y postgrado), Santiago, Chile.
+  </li>
+
+  <li>
+    Universidad de los Andes. (Mayo, 2022).
+    <em>Presentación en coloquio de la Facultad de Educación sobre análisis de redes sociales y agenda de investigación en educación</em>.
+    Coloquio (posgrado), Santiago, Chile.
+  </li>
+
+  <li>
+    Universidad Mayor, Centro de Investigación en Sociedad y Salud (CISS). (Octubre, 2021).
+    <em>Análisis de Redes Sociales e Inclusión Educativa: Estudios del caso chileno</em>.
+    Cátedra / Seminario, Santiago, Chile.
+  </li>
+
+  <li>
+    Comunidad Hispana de Análisis de Redes Sociales (REDES). (Mayo, 2021).
+    <em>Exposición sobre investigación en análisis de redes sociales</em>.
+    Coloquio (público general), Online.
+  </li>
+
+  <li>
+  Sociedad Chilena de Redes Sociales (ChiSocNet), Instituto de Sociología (ISUC) & Centro de Economía y Políticas Sociales, Universidad Mayor. (Mayo, 2025).
+  <em>Salud, bienestar y desigualdad en la adolescencia: una mirada desde las redes sociales</em>.
+  Seminario “Análisis de Redes Sociales en Chile”, Santiago, Chile.
+  </li>
+
+ <li>
+  Núcleo Milenio para la Evaluación y Análisis de Políticas de Drogas (nDP), Universidad Mayor. (Abril, 2023).
+  <em>Investigaciones sobre sustancias: webinar</em>. Perspectiva relacional para el estudio del consumo de sustancias en adolescentes.
+
+  </li>
+
+  </ul>
