--- a/_pages/presentations.html
+++ b/_pages/presentations.html
@@ -125,6 +125,12 @@ author: diego
 <ul>
 
   <li>
+    Sociedad Chilena de Redes Sociales (ChiSocNet), Instituto de Sociología (ISUC) &amp; Centro de Economía y Políticas Sociales, Universidad Mayor. (Mayo, 2025).
+    <em>Salud, bienestar y desigualdad en la adolescencia: una mirada desde las redes sociales</em>.
+    Seminario “Análisis de Redes Sociales en Chile”, Santiago, Chile.
+  </li>
+
+  <li>
     Escuela de Psicología, Pontificia Universidad Católica de Chile (EPUC). (Octubre, 2023).
     <em>Presentación en coloquio sobre aplicaciones del análisis de redes sociales en ciencias sociales</em>.
     Coloquio (postgrado), Santiago, Chile.
@@ -155,15 +161,10 @@ author: diego
   </li>
 
   <li>
-  Sociedad Chilena de Redes Sociales (ChiSocNet), Instituto de Sociología (ISUC) & Centro de Economía y Políticas Sociales, Universidad Mayor. (Mayo, 2025).
-  <em>Salud, bienestar y desigualdad en la adolescencia: una mirada desde las redes sociales</em>.
-  Seminario “Análisis de Redes Sociales en Chile”, Santiago, Chile.
+    Núcleo Milenio para la Evaluación y Análisis de Políticas de Drogas (nDP), Universidad Mayor. (Abril, 2023).
+    <em>Investigaciones sobre sustancias: webinar</em>.
+    Perspectiva relacional para el estudio del consumo de sustancias en adolescentes.
   </li>
 
- <li>
-  Núcleo Milenio para la Evaluación y Análisis de Políticas de Drogas (nDP), Universidad Mayor. (Abril, 2023).
-  <em>Investigaciones sobre sustancias: webinar</em>. Perspectiva relacional para el estudio del consumo de sustancias en adolescentes.
+</ul>
 
-  </li>
-
-  </ul>
