--- a/_pages/presentations.html
+++ b/_pages/presentations.html
@@ -1,12 +1,12 @@
 ---
-layout: archive
+layout: singke
 title: "Presentations"
 permalink: /presentations/
 author_profile: true
 author: diego
 ---
 
-<h2>Selected International Presentations</h2>
+<h2>International Conferences</h2>
 
 <ul>
 
